Deployment: CMS und Hörbuchkatalog Container, Konfiguration per application.yml